--- a/index.css
+++ b/index.css
@@ -157,21 +157,21 @@ body{
 }
 
 .img_list li:nth-child(3n+1){
-    background: url(image/353432-communication-phone-telephone_107500.png) no-repeat;
+    background: url(/main/image/353432-communication-phone-telephone_107500.png) no-repeat;
     background-size: 22px;
     padding: 0 0 3px 25px;
     width: 200px;
 }
 
 .img_list li:nth-child(3n+2){
-    background: url(image/mail_icon_128820.png)no-repeat;
+    background: url(/main/image/mail_icon_128820.png)no-repeat;
     background-size: 20px;
     padding: 0 5px 3px 25px;
     width: 200px;
 }
 
 .img_list li:nth-child(3n+3){
-    background: url(image/insta.png)no-repeat;
+    background: url(/main/image/insta.png)no-repeat;
     background-size: 20px;
     padding: 0 5px 3px 25px;
     text-decoration: none;
@@ -285,7 +285,8 @@ td{
 }
 
 footer{ 
-    width:950px; 
+     border-top: 4px solid;
+    width:100%; 
     text-align: center;
     margin-right: auto; 
     margin-left: auto; 
