--- a/pj2.css
+++ b/pj2.css
@@ -93,7 +93,7 @@ body{
     align-content: center;
     font-family: NanumSquareRoundR;
     -outline: solid 2px;
-    padding: 40px 0 100px ;
+    padding: 40px 0 0 ;
 }
 .main-img{
    width: 500px;
