--- a/pj 1.css
+++ b/pj 1.css
@@ -100,6 +100,26 @@ body{
     height: 500px;
 }
 
+.brand{
+    display: block;
+    float:right;
+    -border: solid;
+    width: 50%;
+    padding: 10px;
+    font-family: NanumSquareRoundB;
+    text-align: center;
+    font-size:xx-large;
+    
+}
+
+.ment{
+    display: block;
+    float:right;
+    -border: solid;
+    width: 50%;
+    padding: 30px;
+    font-family: NanumSquareRoundR;;
+}
 .1{
     display: block;
     width: 700px;
