--- a/pj3.css
+++ b/pj3.css
@@ -95,6 +95,26 @@ body{
     -outline: solid 2px;
     padding: 40px 0 0px ;
 }
+.brand{
+    display: block;
+    float:right;
+    -border: solid;
+    width: 50%;
+    padding: 10px;
+    font-family: NanumSquareRoundB;
+    text-align: center;
+    font-size:xx-large;
+    
+}
+ㄴ
+.ment{
+    display: block;
+    float:right;
+    border: solid;
+    width: 50%;
+    padding: 10px;
+    font-family: NanumSquareRoundR;;
+}
 .main-img{
    width: 500px;
     height: 500px;
